# fastapi-api-main

./: README.md  docker-compose.yml  release.sh
project/: Dockerfile  Dockerfile.prod  pyproject.toml  setup.cfg
project/app/: config.json  config.py  main.py  sentiment.py  summariser.py
project/app/api/: crud.py  ping.py  summaries.py
project/app/models/: tortoise.py
project/static/css/: bootstrap.min.css
project/templates/: index.html
project/tests/: conftest.py  test_summaries_unit.py
